WRP-2674 - fixing two items, first: ensure the FSN wraps in a block, second: give each line item more breathing room.

--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -832,3 +832,12 @@ button[disabled] .project-icon {
     font-size: 28px!important;
     padding-top: 5px!important;
 }
+ .highlight {
+      background-color: #ffeb3b; padding:1px 4px; 
+    
+	color:#474747;}
+	.m-t-3{margin-top:5px;}
+	.angular-ui-tree-node span{display:inline-block; max-width:83%; vertical-align: top;line-height:13px;}
+	.angular-ui-tree-node .small-size-tooltip span{max-width: 90px;
+    width: 90px;
+    vertical-align: baseline;}
